--- a/index.html
+++ b/index.html
@@ -2,15 +2,32 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>MyPFS</title>
+    <title>MyProfile</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
+    <!-- <div class="overlay">
+        <span class="material-icons" id="close">close</span>
+        <nav> 
+            <ul>
+                <li><a href="" target="_blank">s1_op</a></li>
+                <li><a href="" target="_blank">s2_en</a></li>
+                <li><a href="" target="_blank">s3_op</a></li>
+                <li><a href="" target="_blank">s4_en</a></li>
+            </ul>
+        </nav>
+    </div> -->
 
     <header>
         <img src="img/image0.jpeg" alt="icon" id="pi1" width="160" height="160">
-        <h1>name: Syo Tanaka</h1>
+        <div class="runnning"></div>
+        <h1>Syo Tanaka</h1>
+        <p><a href="https://www.instagram.com/kaku_2321/" target="_blank">my instagram account</a></p>
+        <div class="menu">
+            <span class="material-icons" id="open">menu</span>
+        </div>
     </header>
 
 
@@ -26,6 +43,6 @@
         </div>
     </main>
 
-
+    <script src="js/main.js"></script>
 </body>
 </html>
