--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
         <img src="img/image0.jpeg" alt="icon" id="pi1" width="160" height="160">
         <div class="runnning"></div>
         <h1>Syo Tanaka</h1>
-        <p><a href="https://www.instagram.com/kaku_2321/" target="_blank">my instagram account</a></p>
-        <div class="menu">
-            <span class="material-icons" id="open">menu</span>
-        </div>
+        <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">my instagram account</a></p>
     </header>
+    <!-- <div>
+        <span class="material-icons" id="open" class="menu">menu</span>
+    </div> -->
 
 
     <main>
         <div>
             <h2>My Information</h2>
             <h3>Birth Date :  <a href="https://en.wikipedia.org/wiki/Great_Exhibition" target="_blank">1 May, 1858</a></h3>
+            <h3>Birth Place :  <a href="https://www.youtube.com/watch?v=ej3ioOneTy8" target="_blank">Mars</a></h3>
+            <h3>Residence :  <a href="https://www.youtube.com/watch?v=C3_0GqPvr4U" target="_blank">760 United Nations Plaza New York NY 10017</a></h3>
+            <h3>Job :  <a href="https://en.wikipedia.org/wiki/NEET" target="_blank">None.....</a></h3>
             <h3>Favorite Food :  <a href="https://www.youtube.com/watch?v=0b75cl4-qRE" target="_blank">Sushi</a></h3>
             <h3>Favorite Song :  <a href="https://www.youtube.com/watch?v=I1hLZ2OchZ8" target="_blank">Centi Meter</a></a></h3>
-            <h3></h3>
-            <h3></h3>
-            <h3></h3>
         </div>
     </main>
 
